# net_finder

./: .gitignore  Cargo.toml  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: main.yml
crates/cpu/: Cargo.toml
crates/cpu/src/: lib.rs  main.rs
crates/fpga-driver/: Cargo.toml
crates/fpga-driver/src/: lib.rs  main.rs
crates/fpga-sim/: Cargo.toml  build.rs  wrapper.cpp
crates/fpga-sim/src/: lib.rs  main.rs
crates/gpu/: Cargo.toml
crates/gpu/benches/: run_finders.rs
crates/gpu/src/: lib.rs  main.rs  shader.wgsl
fpga/: core.py  gen.py  memory.py  net-finder.xpr  pyproject.toml  requirements.txt  sim.py  utils.py
fpga/core/: base_types.py  neighbour_lookup.py  skip_checker.py  test_neighbour_lookup.py  test_skip_checker.py
fpga/net-finder.srcs/constrs_1/new/: timing.xdc
fpga/net-finder.srcs/sources_1/new/: core.sv  instruction_neighbour.sv  timing_top.sv  types.sv  types.svh  valid_checker.sv  valid_checker.vhdl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: core.rs  finder_info.rs  net.rs  skip_set.rs
net_finder/core/: base_types.py  core.py  fuzz_target.py  group.py  main_pipeline.py  memory.py  neighbour_lookup.py  net.py  skip_checker.py  utils.py
net_finder/core/tests/: test_neighbour_lookup.py  test_skip_checker.py
net_finder/soc/: core.py  gen.py  sim.py  utils.py
net_finder/soc/net-finder.srcs/constrs_1/new/: timing.xdc
net_finder/soc/net-finder.srcs/sim_1/new/: sim.sv
src/: fpga.rs  geometry.rs  lib.rs  main.rs  primary.rs  utils.rs  zdd.rs
src/netless/: construct.rs  mod.rs
src/primary/: cpu.rs  gpu.rs  mod.rs  set.rs  shader.wgsl
src/zdd/: construct.rs  geometry.rs  mod.rs
