[package]
name = "net_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
arbitrary = "1.2.0"
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
heapless = { version = "0.7.16", default-features = false, features = ["serde"] }
indicatif = { version = "0.17.3" }
notify = { version = "5.0.0", features = ["fsevent-sys", "macos_fsevent"], default-features = false }
postcard = { version = "1.0.2", features = ["use-std"] }
rayon = "1.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.96"

[profile.release]
debug = true
