[package]
name = "net-finder-fpga-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
indicatif = "0.17.7"
litex-bridge = { git = "https://github.com/Liamolucko/litex-bridge" }
net-finder = { path = "../..", features = ["no-trie"] }
serde_json = "1.0.113"
wishbone-bridge = { version = "1.1.0", features = [
    "pcie",
    "ethernet",
], default-features = false }
