[package]
name = "net-finder-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.17.7"
net-finder = { path = "../..", features = ["no-trie"] }
pollster = "0.4.0"
wgpu = "24.0.3"
